# video-mosaic

./: CMakeLists.txt  CVM.sln
CVM/: CMakeLists.txt  CVM.vcxproj  CVM.vcxproj.filters  adapt_cv_point.h  approximate_tile_placer.h  config.h.in  cvm.ini  directory_source.cpp  directory_source.h  guide_lines.cpp  guide_lines.h  ideal_to_cut_polygons.cpp  ideal_to_cut_polygons.h  image_to_mosaic.cpp  image_to_mosaic.h  locations_to_polygons.cpp  locations_to_polygons.h  locations_to_scene.cpp  locations_to_scene.h  locator_grid.h  main.cpp  offscreen_render.cpp  opencv_renderer.cpp  opencv_renderer.h  parameters_parser.cpp  parameters_parser.h  polygon_utils.h  polygons_to_image.cpp  polygons_to_image.h  polygons_to_scene.cpp  polygons_to_scene.h  pov_ray_renderer.cpp  pov_ray_renderer.h  precise_tile_placer.h  scene_to_image.cpp  scene_to_image.h  scene_to_mosaic.cpp  scene_to_mosaic.h  superpixels_renderer.cpp  superpixels_renderer.h  (+12 more)
CVM/x64/Release/: topological_map_maker.cpp.nativecodeanalysis.xml
Data/INI/: cvm.ini
Main/: Main.vcxproj  Main.vcxproj.filters  process_directory.cpp  process_file.cpp  test_main.cpp
Motion/: CMakeLists.txt  Motion.vcxproj  Motion.vcxproj.filters  global_motion_estimator.cpp  global_motion_estimator.h  images_to_mask.cpp  images_to_mask.h  video_to_mhi.cpp  video_to_mhi.h
Playground/: Playground.pyproj  Program.py  test_python_module.py
Stitching/: Stitching.vcxproj  Stitching.vcxproj.filters  image_to_features.cpp  image_to_features.h
process_directory/: CMakeLists.txt  process_directory.cpp  process_directory.vcxproj  process_directory.vcxproj.filters
process_file/: CMakeLists.txt  process_file.cpp  process_file.vcxproj  process_file.vcxproj.filters
process_scene/: CMakeLists.txt  process_scene.cpp
process_video/: process_video.cpp  process_video.vcxproj  process_video.vcxproj.filters
python_video_mosaic/: CMakeLists.txt  FindNumpy.cmake  cvm_python_classes.cpp  cvm_python_classes.h  module.cpp  numpy_to_cv.cpp  python_video_mosaic.vcxproj  python_video_mosaic.vcxproj.filters
stitch_test/: stitch_test.cpp
